actually fixed verticle scroll on mobile

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,13 +1,13 @@
 /*-- -------------------------- -->
 <---         Navigation         -->
 <--- -------------------------- -*/
-.header { grid-column: 1 / -1; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; position: relative; height: 9rem; position: fixed; width: 100%; z-index: 200; text-decoration: none; background-color: transparent; color: var(--color-grey-light-1); -webkit-transition: all 0.2s; transition: all 0.2s; }
+.header { grid-column: 1 / -1; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; position: relative; height: 9rem; position: fixed; width: 100vw; z-index: 200; text-decoration: none; background-color: transparent; color: var(--color-grey-light-1); -webkit-transition: all 0.2s; transition: all 0.2s; }
 .header-scrolled { /* This is applied when you scroll the height of the navbar */ height: 7rem; font-size: 1.8rem; background-color: var(--color-grey-dark-1); }
 .header__logo { cursor: pointer; padding-left: 1rem; height: 8rem; -webkit-transition: all 0.1s; transition: all 0.1s; z-index: 10; }
 .header__logo:hover { fill: var(--color-primary-light); -webkit-transform: scale(1.02); transform: scale(1.02); }
 @media only screen and (max-width: 75em) { .header__logo { padding: 0; } }
 @media only screen and (max-width: 37.5em) { .header__logo { margin-right: 0; } }
-.header__nav { position: absolute; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; gap: 3rem; width: 100%; font-size: 1.8rem; font-weight: 300; text-shadow: -1px 1px #000; }
+.header__nav { position: absolute; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; gap: 3rem; width: 100vw; font-size: 1.8rem; font-weight: 300; text-shadow: -1px 1px #000; }
 .header__nav a { padding: 1rem 0.5rem; text-decoration: none; color: var(--color-grey-light-1); -webkit-transition: all 0.1s ease-in-out; transition: all 0.1s ease-in-out; }
 .header__nav a:hover { font-weight: 400; -webkit-transform: scale(1.05); transform: scale(1.05); }
 .header__nav-active { text-decoration: underline !important; text-underline-offset: 1rem; margin-bottom: 1rem; font-weight: 600; }
